Fixed the gap at the top when browser width < 980px

--- a/static/css/core.less
+++ b/static/css/core.less
@@ -23,6 +23,13 @@ body {
 	padding:57px 0 0 0;
 }
 
+@media all and (max-width: 980px) {
+	body {
+		margin-top: 0px;
+		padding-top: 0px;
+	}
+}
+
 /* Desktop */
 @media all and (min-width: @media-desktop-min) {
 	.container-fluid {
